--- a/src/components/farmercomponents/farmerproducts.css
+++ b/src/components/farmercomponents/farmerproducts.css
@@ -76,3 +76,15 @@
   background-color: #ccc;
   padding: 6px 12px;
 }
+.delete-btn {
+  background-color: #e74c3c;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.delete-btn:hover {
+  background-color: #c0392b;
+}
