--- a/src/components/farmercomponents/farmerorders.css
+++ b/src/components/farmercomponents/farmerorders.css
@@ -22,3 +22,11 @@
   background-color: #f7f7f7;
   font-weight: bold;
 }
+.delete-btn {
+  background-color: red;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+}
